Created a Timezone manager This manager more concisely handles all changes with timezones. Not fully implemented.

--- a/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
+++ b/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
@@ -51,4 +51,9 @@
     <Resource Include="UI\Images\SeeShells.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+    <Folder Include="Services\TimezoneManager\" />
+  </ItemGroup>
+
 </Project>
