--- a/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
+++ b/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
 	  <LangVersion>11.0</LangVersion>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
 	<PublishSingleFile>true</PublishSingleFile>
 	<SelfContained>true</SelfContained>
 	<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
@@ -12,6 +12,7 @@
     <StartupObject>SeeShellsV3.Program</StartupObject>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>SeeShells.ico</ApplicationIcon>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
