Update project and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Case Studies/Case Study 1/test.csv
+/Case Studies/Case Study 1/test.pdf
