--- a/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
+++ b/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
@@ -51,4 +51,8 @@
     <Resource Include="UI\Images\SeeShells.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\ReportEventCollection\" />
+  </ItemGroup>
+
 </Project>
