Updated OxyPlot for better legend functionality. Updated Heat Map's files to function more like the Histogram's.

--- a/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
+++ b/SeeShellsV3/SeeShellsV3/SeeShellsV3.csproj
@@ -38,9 +38,10 @@
     <PackageReference Include="Dirkster.AvalonDock.Themes.VS2013" Version="4.50.2" />
     <PackageReference Include="DotNetProjects.Extended.Wpf.Toolkit" Version="4.6.96" />
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
-    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.8.0" />
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="OxyPlot.Wpf" Version="2.0.0" />
+    <PackageReference Include="OxyPlot.Wpf" Version="2.1.2" />
+    <PackageReference Include="OxyPlot.Wpf.Shared" Version="2.1.2" />
     <PackageReference Include="Unity" Version="5.11.9" />
 	<PackageReference Include="WPFHexaEditor" Version="2.1.6" />
   </ItemGroup>
